# yealink-contacts-ui

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKERHUB.md  Makefile  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  docker-compose.dev.yml  docker-compose.yml  examples.export-profile.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docker-ci.yml  dockerhub-description.yml  release.yml  semantic-pr-title.yml
app/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
app/backend/alembic/: env.py
app/backend/alembic/versions/: 0001_initial.py  0002_auth_and_acl.py
app/backend/src/yealink_contacts/: main.py
app/backend/src/yealink_contacts/adapters/: __init__.py  base.py
app/backend/src/yealink_contacts/adapters/outputs/yealink/: __init__.py  adapter.py
app/backend/src/yealink_contacts/adapters/sources/: __init__.py
app/backend/src/yealink_contacts/adapters/sources/carddav/: __init__.py  adapter.py
app/backend/src/yealink_contacts/adapters/sources/google/: __init__.py  adapter.py
app/backend/src/yealink_contacts/api/: __init__.py  auth.py  config.py  contacts.py  dashboard.py  deps.py  export_profiles.py  exports.py  jobs.py  logs.py  router.py  settings.py  sources.py  yealink.py
app/backend/src/yealink_contacts/core/: __init__.py  config.py  logging.py  security.py  version.py
app/backend/src/yealink_contacts/db/: __init__.py  session.py
app/backend/src/yealink_contacts/dedup/: __init__.py  service.py
app/backend/src/yealink_contacts/jobs/: admin.py  seed_demo.py
app/backend/src/yealink_contacts/models/: __init__.py  app_setting.py  audit.py  auth.py  common.py  contact.py  export_profile.py  job.py  source.py
app/backend/src/yealink_contacts/rules/: __init__.py  engine.py  search_query.py  template.py
app/backend/src/yealink_contacts/schemas/: __init__.py  auth.py  common.py  config.py  contact.py  dashboard.py  export_profile.py  job.py  rules.py  settings.py  source.py
app/backend/src/yealink_contacts/services/: __init__.py  access_control.py  audit.py  auth_service.py  config_service.py  contact_service.py  dashboard_service.py  export_service.py  log_service.py  network_security.py  normalization.py  settings_service.py  source_service.py  sync_service.py  utils.py
app/backend/src/yealink_contacts/tests/: conftest.py  test_admin_cli.py  test_api.py  test_auth_api.py  test_carddav_adapter.py  test_config.py  test_dedup.py  test_rules_engine.py  test_sync.py  test_template.py  test_yealink_output.py
app/backend/src/yealink_contacts_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
app/frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
app/frontend/src/: App.tsx  main.tsx  styles.css
app/frontend/src/components/: ConfirmDialog.tsx  DataTable.tsx  Layout.tsx  QueryStatePanel.tsx  SectionCard.tsx  StatCard.tsx
app/frontend/src/hooks/: useToast.tsx
app/frontend/src/lib/: api.ts  i18n.ts  projectMeta.ts
app/frontend/src/pages/: AboutPage.tsx  ContactsPage.tsx  DashboardPage.tsx  (+5 more)
scripts/: verify-docker-stack.sh
(+22 files in other folders)
