[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yealink-contacts-backend"
version = "0.2.6"
description = "Backend for Yealink contact synchronization UI"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
  { name = "MrRagga-" }
]
urls = { Homepage = "https://github.com/MrRagga-/yealink-contacts-ui", Repository = "https://github.com/MrRagga-/yealink-contacts-ui", Issues = "https://github.com/MrRagga-/yealink-contacts-ui/issues" }
dependencies = [
  "alembic>=1.18.4",
  "fastapi>=0.135.3",
  "google-api-python-client>=2.194.0",
  "google-auth>=2.49.2",
  "google-auth-oauthlib>=1.3.1",
  "httpx>=0.28.1",
  "phonenumbers>=9.0.27",
  "psycopg[binary]>=3.3.3",
  "pydantic-settings>=2.13.1",
  "python-dotenv>=1.2.2",
  "python-multipart>=0.0.26",
  "sqlalchemy>=2.0.49",
  "structlog>=25.5.0",
  "uvicorn[standard]>=0.44.0",
  "vobject>=0.9.9",
  "cryptography>=46.0.7",
  "pwdlib[argon2]>=0.3.0",
  "webauthn>=2.7.1",
  "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "respx>=0.23.1",
  "ruff>=0.15.10",
  "ty>=0.0.29",
]

[project.scripts]
yealink-contacts-ui-admin = "yealink_contacts.jobs.admin:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/yealink_contacts/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.ty.environment]
python-version = "3.12"
